--- a/dij music.html
+++ b/dij music.html
@@ -1,4 +1,5 @@
 <html>
+	<head>
  <meta name="viewport" content="width=device-width, initial-scale=1">
   
    
@@ -6,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
+<body>
 <body background="https://www.sweetwater.com/insync/media/2013/05/live-sound-microphone.jpg">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
