--- a/dij music.html
+++ b/dij music.html
@@ -1,11 +1,11 @@
 <html>
-	<head>
  <meta name="viewport" content="width=device-width, initial-scale=1">
   
    
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
 <body background="https://www.sweetwater.com/insync/media/2013/05/live-sound-microphone.jpg">
 <nav class="navbar navbar-default">
@@ -212,6 +212,4 @@
 <br>
 <br>
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332679480&amp;color=%23f00521&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-	
-	</body>
 	</html>
