--- a/dij music.html
+++ b/dij music.html
@@ -5,134 +5,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-
-<body background="https://www.sweetwater.com/insync/media/2013/05/live-sound-microphone.jpg">
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"> <font color="blue"> Name</font><font color="green">Tag</font></a>
-    </div>
-    <ul class="nav navbar-nav">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-       <li> <style> .dropbtn {
-    background-color: brown
-    color:#A52A2A ;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: brown;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: red;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: brown}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: dark green;
-}
-</style>
-</head>
-<body>
-
-
-
-<div class="dropdown">
-  <button class="dropbtn">Enlighten</button>
-  <div class="dropdown-content">
-    <a href="https://soundcloud.com/user-852568500">soundcloud</a>
-    <a href="https://enlightenpro.github.io/enlighten-music/">Enlighten music</a>
-    <a href="#">Link 3</a>
-  </div>
-</div> <li>
-	<head>
+<head>
 	
-	<br>
-	<br>
-     <li><style>
-	 
-     <li> <style> .dropbtn {
-    background-color: brown
-    color:#A52A2A ;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: brown;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: red;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: brown}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: dark green;
-}
-</style>
-</head>
-<body>
-
-
-
-<div class="dropdown">
-  <button class="dropbtn">Young Prophet</button>
-  <div class="dropdown-content">
-    <a href="https://soundcloud.com/yungphrophet">soundcloud</a>
-    <a href="#">Young Prophet music</a>
-    <a href="#">Link 3</a>
-  </div>
-</div> <li>
-	<head>
-	
-	<br>
-	<br>
-     <li><style>
+	<style>
 .dropbtn {
     background-color: black;
     color: white;
@@ -174,6 +49,52 @@
 }
 </style>
 </head>
+<body>
+
+
+
+	
+	
+	
+	
+	
+	
+
+<body background="https://www.sweetwater.com/insync/media/2013/05/live-sound-microphone.jpg">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#"> <font color="blue"> Name</font><font color="green">Tag</font></a>
+    </div>
+    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+       <li> 
+
+
+
+<div class="dropdown">
+  <button class="dropbtn">Enlighten</button>
+  <div class="dropdown-content">
+    <a href="https://soundcloud.com/user-852568500">soundcloud</a>
+    <a href="https://enlightenpro.github.io/enlighten-music/">Enlighten music</a>
+    <a href="#">Link 3</a>
+  </div>
+</div> <li>
+	
+
+
+
+
+<div class="dropdown">
+  <button class="dropbtn">Young Prophet</button>
+  <div class="dropdown-content">
+    <a href="https://soundcloud.com/yungphrophet">soundcloud</a>
+    <a href="#">Young Prophet music</a>
+    <a href="#">Link 3</a>
+  </div>
+</div> <li>
+	
 <body>
 
 
